--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Movie Hub</title>
   </head>
   <body>
     <div id="root"></div>
