--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/b1efc96d-df52-481f-a9c5-28984601770f/daedbxr-d883eba4-5caa-4353-89d4-40430f12f7c8.png/v1/fill/w_894,h_894,q_70,strp/white_netflix_icon_by_imakeiconssometimes_daedbxr-pre.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -15,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>Movie Hub</title>
+    <title>Notflix</title>
   </head>
   <body>
     <div id="root"></div>
